src/index.css
*, ::before, ::after{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  line-height: 1.5em;
}

body {
  font-family: 'Rock Salt', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-image: repeating-radial-gradient( black 10%, orange 22%, navy 40%);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.wrapper{
  display: flex;
  display: -webkit-flex;
  width: auto;
  height: 100vh;
  padding: 10px;
  justify-content: center;
  align-items: center;
}

#drum-machine{
  display: flex;
  display: -webkit-flexbox;
  flex-direction:column;
  width: 100%;
  height: auto;
  padding:3px;
  /*grid-template-columns: auto;
  grid-template-rows: 50px auto auto 100px;
  grid-template-areas: "header header header"
                      "pads pads pads"
                      "pads pads pads"
                      "pads pads pads"
                      "controls controls controls";*/
  border:3px solid navy;
  background-color: black;
  box-shadow:0px 0px 20px 10px white;
}

#drum-machine > header {
  grid-area: header;
  display:flex;
  display: -webkit-flexbox;
  height: 50px;
  justify-content: center;
  align-items: center;
  background-color: navy;
  border: 5px solid orange;
  font-size:20px;
  color: white;
}

#padgrid{
  display:grid;
  height:100%;
  min-height: 225px;
  grid-template-columns: 33% 34% 33%;
  grid-template-rows: 33% 34% 33%;
  grid-area: pads;
  border:solid 5px orange;
  background-color:black;
}

.drum-pad{
  display:flex;
  display: -webkit-flexbox;
  flex: 0 1;
  justify-content: center;
  align-items: center;
  border: 2px solid black;
  font-size:2em;
  border-radius:10px;
}

.pad-active{
  background-color:orangered;
  box-shadow: inset 0px 0px 10px black;
  outline: none;
}

.pad-inactive{
  background-color:lightslategray;
  box-shadow: 0px 0px 10px black;
}

.pad-label{
  text-align:center;
  font-size:60px;
}



#controlsbox{
  display:flex;
  display: -webkit-flexbox;
  height:100%;
  max-height:200px;
  flex-direction:column;
  justify-content: space-around;
  align-items: center;
  border: 5px solid orange;
  background-color:navy;
  grid-area:controls;
}

#display{
  display: flex;
  display: -webkit-flexbox;
  width:90%;
  justify-content: center;
  align-items: center;
  height: 50px;
  margin: 10px;
  border: 2px solid black;
  background-color: lightblue;
}

#controls{
  display:flex;
  display: -webkit-flexbox;
  width: 100%;
  height: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  color: white;
}
#volume-contianer{
  display:flex;
  display: -webkit-flexbox;
  flex-direction:column;
  width:100%;
  align-items:center;
}
#volume{
  width: 80%;
  margin: 10px;
}

#bank-select{
  display: flex;
  display: -webkit-flexbox;
  width:100%;
  justify-content: space-evenly;
  align-items: center;
  color: white;
  margin:10px 0px;
}

#bank-prev{
  width:0;
  height:0;
  margin:5px;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-right: 15px solid orange;
}

#bank-next{
  width:0;
  height:0;
  margin:5px;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;

  border-left: 15px solid orange;
}

@media only screen and (max-height: 500px){
.wrapper{
  height:auto;
}
}

@media only screen and (min-height: 768px){
  .drum-pad{
    min-height:175px;
  }
}

@media only screen and (min-width: 1024px){
  #drum-machine{
    display: grid;
    width: 90%;
    height: 90%;
    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto auto auto auto;
    grid-template-areas: "header header header header"
                        "pads pads pads controls"
                        "pads pads pads controls"
                        "pads pads pads controls";
  }
 
  #drum-machine > header {
    height: 100%;
    background-color: navy;
    font-size:2em;
  }

  #controlsbox{
    max-height:none;
    border-top: 0px;
    border-left: 2px;
  }

  #display{
    height: 100px;
    margin: 30px;
    font-size: 1.25em;
  }

  #controls{
    justify-content: space-around;
  }

  #padgrid{
    border-top: none;
  }
}

